@@ -215,9 +215,18 @@ public class WebBrowser {
             try {
                 URLConnection cnx = url.openConnection();
 
+                // TODO: Move these workarounds into a property file so they can be overridden at runtime 
+                
                 // A workaround for the need to use a referrer for thetvdb.com
                 if (imageURL.toLowerCase().indexOf("thetvdb") > 0)
                     cnx.setRequestProperty("Referer", "http://forums.thetvdb.com/");
+
+                // A workaround for the kinopoisk.ru site
+                if (url.getHost().toLowerCase().indexOf("kinopoisk") > 0) {
+                    cnx.setRequestProperty("Accept", "text/html, text/plain");
+                    cnx.setRequestProperty("Accept-Language", "ru");
+                    cnx.setRequestProperty("User-Agent", "Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2) Gecko/20100115 Firefox/3.6");
+                }
 
                 if (mjbProxyUsername != null) {
                     cnx.setRequestProperty("Proxy-Authorization", mjbEncodedPassword);
