@@ -27,6 +27,7 @@ MovieJukebox 2.0 BETA
   - Enhancement  #1389 Allocine now gets certifications
   - Fixed defect #1394 TV Series Episode names not picked up from filename
   - Fixed defect #1399 Keep previously scanned movies parameter causes <cast> duplicate name
+  - Fixed defect #1403 Kinopoisk plugin changes for referrer string
 
 MovieJukebox 1.9 (r1500)
 ------------------------
